Fixed scanning issue camera not showing

--- a/UI/src/app/app.component.scss
+++ b/UI/src/app/app.component.scss
@@ -1,13 +1,3 @@
 .title {
   flex: 1;
 }
-
-.full-screen-scanner {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 9999;
-  background: black;
-}
